fix obsolete constructors